Fix more UI issues.
(1) Fix overflowing interactive map widget.
(2) Reverse the order of the cancel/submit buttons in the feedback modal in the learner view.
(3) Add icons to the Edit and Preview buttons in the exploration editor page.
(4) Adjust the width of the header row so that the control buttons fit in one line.
(5) Allow the tutorial to be started properly when the user is in preview mode.
(6) Widen the tutorial tooltip for the initial step, and remove the step numbers in the red circles.
(7) Make some CSS fixes to the exploration editor for the case when the exploration is not editable by the current user.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -670,6 +670,9 @@ div.wysiwyg iframe.wysiwyg-content-large {
 .oppia-state-content-display {
   background: rgba(0, 0, 0, 0.04);
   border-radius: 6px;
+}
+
+.oppia-prevent-selection {
   -moz-user-select: none;
   -ms-user-select: none;
   -webkit-user-select: none;
@@ -719,10 +722,10 @@ div.wysiwyg iframe.wysiwyg-content-large {
 }
 .oppia-editor-pencil {
   font-size: 16px;
-  display: none;
+  opacity: 0.4;
 }
 .oppia-editable-section:hover .oppia-editor-pencil {
-  display: inline;
+  opacity: 1.0;
 }
 
 .oppia-interactive-hint {
@@ -954,4 +957,8 @@ oppia-parameter {
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
+}
+
+.oppia-tutorial-tooltip {
+  min-width: 300px !important;
 }
